# wisc-humanoid-se-iekf

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
iekf/: pyproject.toml
iekf/src/iekf/: kinematics.py  right_invariant.py
iekf/src/iekf/utils/: lie_group.py  types.py
scripts/: g1_dancing.py  simulation.py
src/: __init__.py  contact_bias_iekf.py  dynamics.py  forward_kinematics.py  g1_dancing.py  lie_group.py  types.py
src/humanoid/se/iekf/: dynamics.py  forward_kinematics.py  lie_group.py  types.py
src/humanoid/se/sim/: simulation.py
src/whse/: simulation.py
src/whse/iekf/: dynamics.py  lie_group.py  types.py
src/whse/iekf/models/: base.py  contact_bias.py
tests/: test_contact_bias.py  test_free_fall.py
